--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -46,16 +46,17 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-        <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a>
+        <a href="#intro" class="scrollto"><img src="img/image2.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li class="active"><a href="#intro">Inicio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#portfolio">Blog</a></li>
+          <li><a href="#team">Equipo</a></li>
+          <li><a href="#team">Contacto</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -91,10 +92,10 @@
       </div>
 
       <div class="intro-info">
-        <h2>We provide<br><span>solutions</span><br>for your business!</h2>
+        <h2>¡Brindamos<br><span>soluciones</span><br>para tu negocio!</h2>
         <div>
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
-          <a href="#services" class="btn-services scrollto">Our Services</a>
+          <a href="#about" class="btn-get-started scrollto">Conocenos</a>
+          <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
         </div>
       </div>
 
@@ -104,13 +105,13 @@
   <main id="main">
 
     <!--==========================
-      About Us Section
+      Nosotros Us Section
     ============================-->
     <section id="about">
       <div class="container">
 
         <header class="section-header">
-          <h3>About Us</h3>
+          <h3>Nosotros</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </header>
 
@@ -185,13 +186,13 @@
     </section><!-- #about -->
 
     <!--==========================
-      Services Section
+      Servicio Section
     ============================-->
     <section id="services" class="section-bg">
       <div class="container">
 
         <header class="section-header">
-          <h3>Services</h3>
+          <h3>Servicio</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
@@ -545,12 +546,12 @@
     </section><!-- #testimonials -->
 
     <!--==========================
-      Team Section
+      Equipo Section
     ============================-->
     <section id="team">
       <div class="container">
         <div class="section-header">
-          <h3>Team</h3>
+          <h3>Equipo</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
         </div>
 
@@ -702,13 +703,13 @@
     </section>
 
     <!--==========================
-      Contact Section
+      Contacto Section
     ============================-->
     <section id="contact">
       <div class="container-fluid">
 
         <div class="section-header">
-          <h3>Contact Us</h3>
+          <h3>Contacto</h3>
         </div>
 
         <div class="row wow fadeInUp">
