--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -46,7 +46,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-        <a href="#intro" class="scrollto"><img src="img/image2.png" alt="" class="img-fluid"></a>
+        <a href="#intro" class="scrollto"><img src="img/logo programacioon- sin espacios.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
@@ -148,7 +148,7 @@
         </div>
 
         <div class="row about-extra">
-          <div class="col-lg-6 wow fadeInUp">
+          <div class="col-lg- wow fadeInUp">
             <img src="img/about-extra-1.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
@@ -339,7 +339,7 @@
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
-            </ul>
+            </ul> 
           </div>
         </div>
 
