--- a/template/css/style.css
+++ b/template/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #007bff;
+  color: hsl(211, 100%, 50%);
   transition: 0.5s;
 }
 
@@ -158,8 +158,8 @@ h6 {
 
 #header .logo img {
   padding: 0;
-  margin: 7px 0;
-  max-height: 26px;
+  margin: 3px 0;
+  max-height: 38px;
 }
 
 .main-pages {
