--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -58,6 +58,7 @@
           <li><a href="#portfolio">Blog</a></li>
           <li><a href="#team">Equipo</a></li>
           <li><a href="#team">Contacto</a></li>
+          <!--
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -75,6 +76,7 @@
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
+          -->
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav -->
@@ -247,7 +249,7 @@
         </div>
 
       </div>
-    </section><!-- #services -->
+    </section><!-- #servicio -->
 
     <!--==========================
       Why Us Section
