--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -76,8 +76,9 @@
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          -->
+          
           <li><a href="#contact">Contact Us</a></li>
+          -->
         </ul>
       </nav><!-- .main-nav -->
       
@@ -85,7 +86,7 @@
   </header><!-- #header -->
 
   <!--==========================
-    Intro Section
+    Seccion Intro
   ============================-->
   <section id="intro" class="clearfix">
     <div class="container">
@@ -108,7 +109,7 @@
   <main id="main">
 
     <!--==========================
-      Nosotros Us Section
+      Seccion Nosotros
     ============================-->
     <section id="about">
       <div class="container">
@@ -127,19 +128,25 @@
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <h4 class="title"><a href="">Confianza</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Caracter</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
 
-            <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
+            <div class="icon-box wow fadeInUp" data-wow-delay="0.8s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">Rendimiento</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+
+            <div class="icon-box wow fadeInUp" data-wow-delay="1.2s">
+              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <h4 class="title"><a href="">Eficientes</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
 
