--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -92,11 +92,11 @@
     <div class="container">
 
       <div class="intro-img">
-        <img src="img/intro-img.svg" alt="" class="img-fluid">
+        <img src="img/logo.jpg" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
-        <h2>¡Brindamos<br><span>soluciones</span><br>para tu negocio!</h2>
+        <h2>¡Muebles<br><span>soluciones</span><br>para tu casa</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Conocenos</a>
           <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
