--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -116,7 +116,7 @@
 
         <header class="section-header">
           <h3>Nosotros</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Somos una empresa de amueblamiento y solociones para el hogar. Nos interesa la comodidad y la funcionalidad de todos tus muebles.</p>
         </header>
 
         <div class="row about-container">
