--- a/template/css/style.css
+++ b/template/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: hsl(211, 100%, 50%);
+  color: rgb(0, 123, 255);
   transition: 0.5s;
 }
 
@@ -189,14 +189,14 @@ h6 {
 }
 
 #intro .intro-info h2 {
-  color: #fff;
+  color: #8d8a8a;
   margin-bottom: 40px;
   font-size: 48px;
   font-weight: 700;
 }
 
 #intro .intro-info h2 span {
-  color: #74b5fc;
+  color: #0f0f0f;
   text-decoration: underline;
 }
 
@@ -211,19 +211,19 @@ h6 {
   border-radius: 50px;
   transition: 0.5s;
   margin: 0 20px 20px 0;
-  color: #fff;
+  color: #0f0f0f;
 }
 
 #intro .intro-info .btn-get-started {
-  background: #007bff;
-  border: 2px solid #007bff;
-  color: #fff;
+  background: #e92145;
+  border: 2px solid #0f0f0f;
+  color: #0f0f0f;
 }
 
 #intro .intro-info .btn-get-started:hover {
   background: none;
-  border-color: #fff;
-  color: #fff;
+  border-color: #0f0f0f;
+  color: #0f0f0f;
 }
 
 #intro .intro-info .btn-services {
@@ -231,8 +231,8 @@ h6 {
 }
 
 #intro .intro-info .btn-services:hover {
-  background: #007bff;
-  border-color: #007bff;
+  background: #a8a2a2;
+  border-color: #7a7b7c;
   color: #fff;
 }
 
@@ -263,7 +263,7 @@ h6 {
 .main-nav a {
   display: block;
   position: relative;
-  color: #004289;
+  color: #0f0f0f;
   padding: 10px 15px;
   transition: 0.3s;
   font-size: 14px;
@@ -274,7 +274,7 @@ h6 {
 .main-nav a:hover,
 .main-nav .active > a,
 .main-nav li:hover > a {
-  color: #007bff;
+  color: #0f0f0f;
   text-decoration: none;
 }
 
