actualizar proyecto final

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -539,17 +539,17 @@ h6 {
   flex-direction: column;
   text-align: center;
   border-radius: 50%;
-  border: 2px solid #007bff;
+  border: 2px solid #434344;
   transition: all 0.3s ease-in-out;
 }
 
 #about .about-container .icon-box .icon i {
-  color: #007bff;
+  color: #434344;
   font-size: 24px;
 }
 
 #about .about-container .icon-box:hover .icon {
-  background: #007bff;
+  background: #111111;
 }
 
 #about .about-container .icon-box:hover .icon i {
