--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -105,7 +105,8 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Nosotros aprendimos a comprender tu idea 15 Años fabricando muebles para el hogar. Actualmente somos una empresa que se dedica al diseño, fabricación y comercialización de muebles de melamina a medida y cortinas.
+              Nos hemos especializado en la fabricación de muebles para cocina, dormitorios, salas, baños, espacios recreacionales, oficinas y todo espacio que requiera de este servicio.
             </p>
 
             <div class="icon-box wow fadeInUp">
