actualizar proyacto final

--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -195,14 +195,14 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
+              <div class="icon"><i class="ion-settings" style="color: #5c595a;"></i></div>
               <h4 class="title"><a href="">Planos</a></h4>
               <p class="description">Servicio de asesoría, diseño y planificación de muebles, realizamos todo el desglose y planos de tus muebles o proyectos, para que lo puedas armar.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
+              <div class="icon"><i class="ion-android-bus" style="color: #5c595a;"></i></div>
               <h4 class="title"><a href="">Transporte</a></h4>
               <p class="description">Transportar un mueble no es tarea facil. Entregar un sofa o mudar una mesa puede ocacionar acontecimientos inprevistos. </p>
             </div>
@@ -210,14 +210,14 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
+              <div class="icon"><i class="ion-hammer" style="color: #5c595a;"></i></div>
               <h4 class="title"><a href="">Instalacion</a></h4>
               <p class="description">Contactá a los profesionales de para cualquier servicio de instalación y fijación de muebles.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
+              <div class="icon"><i class="ion-monitor" style="color:#5c595a"></i></div>
               <h4 class="title"><a href="">Sofware</a></h4>
               <p class="description">Te brindamos el Sofware que usan los mas grandes fabricantes de muebles de mercado. </p>
             </div>
@@ -225,14 +225,14 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
+              <div class="icon"><i class="ion-ios-paper-outline" style="color: #5c595a"></i></div>
               <h4 class="title"><a href="">Garantia</a></h4>
               <p class="description">OfreceMOS un plazo de garantía de 6 meses o 3 meses dependiendo de la pieza. La garantía cubre cualquier defecto de fabricación detectado después de la resección del producto.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
+              <div class="icon"><i class="ion-clock" style="color: #5c595a"></i></div>
               <h4 class="title"><a href="">Ultimas tendencias</a></h4>
               <p class="description">Las tendencias en mobiliario para negocios y empresas cambian año tras año y estas deben estar presentes a la hora de diseñar el proyecto</p>
             </div>
