--- a/template/indexPROYECTOFINAL.html
+++ b/template/indexPROYECTOFINAL.html
@@ -59,7 +59,7 @@
           <li><a href="#services">Servicios</a></li>
           <li><a href="#portfolio">Portafolio</a></li>
           <li><a href="#team">Equipo</a></li>
-          <li><a href="#team">Contacto</a></li>
+          <li><a href="#contact">Contacto</a></li>
 
         </ul>
       </nav><!-- .main-nav -->
@@ -292,24 +292,19 @@
 
         <div class="row counters">
 
-          <div class="col-lg-3 col-6 text-center">
+          <div class="col-lg-4 col-6 text-center">
             <span data-toggle="counter-up">274</span>
-            <p>Clients</p>
+            <p>Clientes</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">421</span>
-            <p>Projects</p>
+          <div class="col-lg-4 col-6 text-center">
+            <span data-toggle="counter-up">321</span>
+            <p>Proyectos</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
-            <p>Hours Of Support</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">18</span>
-            <p>Hard Workers</p>
+          <div class="col-lg-4 col-6 text-center">
+            <span data-toggle="counter-up">4,364</span>
+            <p>Horas de trabajo</p>
           </div>
   
         </div>
@@ -478,7 +473,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Testimonials</h3>
+          <h3>Testimonio</h3>
         </header>
 
         <div class="row justify-content-center">
@@ -488,46 +483,46 @@
     
               <div class="testimonial-item">
                 <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Emanuel Castillo</h3>
+                <h4>Contador</h4>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Mas que conforme con el equipamiento de mi oficina.. todo muy lindo. y sobre todo funcional.
                 </p>
               </div>
     
               <div class="testimonial-item">
                 <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Liliana Cortez</h3>
+                <h4>Dr Psicologia</h4>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Muy conforme con el resultado de mi escritorio. tal cual como lo pensaba.
                 </p>
               </div>
     
               <div class="testimonial-item">
                 <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Maria Mamani</h3>
+                <h4>Deportista</h4>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  El mueble queda precioso, tiene un toque de diseño dentro de sus líneas sencillas y encaja con muchos tipos de decoración. Nos llevó dos horas montarlo sin mucha dificultad y ha quedado perfecto. Es espacioso y cómodo. El cierre suave se agradece. Por parte de Muebles.es todo genial, muy buena atención.
                 </p>
               </div>
     
               <div class="testimonial-item">
                 <img src="img/testimonial-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Fransisco Ybarra</h3>
+                <h4>Futbolista</h4>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Formalidad y profesionalidad. En todo momento me han informado de cómo iba el proceso, desde la compra a la entrega. Volvería a comprar sin dudarlo.
                 </p>
               </div>
     
               <div class="testimonial-item">
                 <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Joel Arrollo</h3>
+                <h4>Empleado</h4>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Los chicos de la entrega fueron especialmente atentos, alegres y comprometidos. Eran tres pisos sin ascensor no tuvieron queja si no todo lo contrario, me recibieron de con una sonrisa increíble y un buen saber estar. Ojalá hubiera mas gente así.
                 </p>
               </div>
 
@@ -557,8 +552,8 @@
               <img src="img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Sergio ivan GUIZADA</h4>
+                  <span>Diseñador</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -575,8 +570,8 @@
               <img src="img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
+                  <h4>Anahi Calisaya</h4>
+                  <span>Productora</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -593,8 +588,8 @@
               <img src="img/team-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
+                  <h4>Maartin Gallo</h4>
+                  <span>ejecucion de obra</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -611,8 +606,8 @@
               <img src="img/team-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+                  <h4>Martina Quiroga <h4>
+                  <span>Marketing</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
